[FIX] Modal on mobile scrollable ?

--- a/app/assets/stylesheets/briarcliff/_modal.scss
+++ b/app/assets/stylesheets/briarcliff/_modal.scss
@@ -8,9 +8,8 @@
   right: 0;
   z-index: 20;
   pointer-events: none;
-  height: 100%;
-  height: 100vh;
-  min-height: 100vh;
+  max-height: 100vh;
+  max-height: 100%;
   overflow-y: auto;
   .box {
     pointer-events: auto;
